// Escuela de Conducción - ER Diagram (DBML)
// Para visualizar: https://dbdiagram.io/
// Versión: 1.0

// ===== AUTH SCHEMA =====
Table auth.usuarios {
  id bigserial [primary key]
  email varchar [unique, not null]
  contrasena_hash varchar [not null]
  nombre varchar [not null]
  apellido varchar [not null]
  rol varchar [not null]
  estado varchar [not null, default: "ACTIVO"]
  ultimo_login timestamp [null]
  intentos_login_fallidos smallint [default: 0]
  created_at timestamp [not null, default: "NOW()"]
  updated_at timestamp [null]
  deleted_at timestamp [null]
}

// ===== ESTUDIANTES SCHEMA =====
Table estudiantes.estudiantes {
  id bigserial [primary key]
  cedula varchar [unique, not null]
  nombre varchar [not null]
  apellido varchar [not null]
  email varchar [unique, not null]
  telefono varchar [not null]
  fecha_matricula date [not null]
  estado varchar [not null, default: "ACTIVO"]
  horas_programadas integer [default: 0]
  horas_completadas integer [default: 0]
  created_at timestamp [not null]
  updated_at timestamp [null]
  deleted_at timestamp [null]
}

// ===== INSTRUCTORES SCHEMA =====
Table instructores.instructores {
  id bigserial [primary key]
  cedula varchar [unique, not null]
  nombre varchar [not null]
  apellido varchar [not null]
  email varchar [unique, not null]
  telefono varchar [not null]
  licencia_numero varchar [unique, not null]
  licencia_fecha_vencimiento date [not null]
  estado varchar [not null, default: "ACTIVO"]
  horas_totales integer [default: 0]
  created_at timestamp [not null]
  updated_at timestamp [null]
  deleted_at timestamp [null]
}

// ===== VEHICULOS SCHEMA =====
Table vehiculos.vehiculos {
  id bigserial [primary key]
  placa varchar [unique, not null]
  marca varchar [not null]
  modelo varchar [not null]
  año smallint [not null]
  fecha_soat date [not null]
  fecha_inspeccion_tecnica date [not null]
  kilometraje integer [default: 0]
  estado varchar [not null, default: "DISPONIBLE"]
  created_at timestamp [not null]
  updated_at timestamp [null]
  deleted_at timestamp [null]
}

Table vehiculos.alertas_soat {
  id bigserial [primary key]
  vehiculo_id bigint [not null]
  dias_para_vencer integer [not null]
  estado varchar [not null]
  fecha_generada timestamp [not null]
}

Ref: vehiculos.alertas_soat.vehiculo_id > vehiculos.vehiculos.id

// ===== ASIGNACIONES SCHEMA =====
Table asignaciones.asignaciones {
  id bigserial [primary key]
  estudiante_id bigint [not null]
  instructor_id bigint [not null]
  vehiculo_id bigint [not null]
  fecha_hora timestamp [not null]
  duracion_minutos smallint [not null]
  tipo_clase varchar [not null]
  estado varchar [not null, default: "PROGRAMADA"]
  observaciones text [null]
  created_at timestamp [not null]
  updated_at timestamp [null]
  deleted_at timestamp [null]
}

// ===== COBROS SCHEMA =====
Table cobros.facturas {
  id bigserial [primary key]
  estudiante_id bigint [not null]
  numero_factura varchar [unique, not null]
  fecha_emision date [not null]
  monto_original numeric [not null]
  monto_pagado numeric [default: 0]
  monto_pendiente numeric [not null]
  estado varchar [not null, default: "PENDIENTE"]
  descripcion text [null]
  created_at timestamp [not null]
  updated_at timestamp [null]
  deleted_at timestamp [null]
}

Table cobros.pagos {
  id bigserial [primary key]
  factura_id bigint [not null]
  monto numeric [not null]
  fecha_pago date [not null]
  metodo_pago varchar [not null]
  numero_referencia varchar [null]
  estado varchar [not null, default: "PROCESADO"]
  created_at timestamp [not null]
}

Ref: cobros.pagos.factura_id > cobros.facturas.id

// ===== NOTIFICACIONES SCHEMA =====
Table notificaciones.notificaciones {
  id bigserial [primary key]
  usuario_id bigint [not null]
  tipo varchar [not null]
  titulo varchar [not null]
  contenido text [not null]
  leida boolean [default: false]
  created_at timestamp [not null]
  deleted_at timestamp [null]
}

Table notificaciones.log_envio_email {
  id bigserial [primary key]
  destinatario varchar [not null]
  asunto varchar [not null]
  cuerpo_html text [not null]
  estado_envio varchar [not null]
  fecha_intento timestamp [not null]
  fecha_entrega timestamp [null]
  created_at timestamp [not null]
}

// ===== REPORTES SCHEMA =====
Table reportes.ejecucion_reporte {
  id bigserial [primary key]
  tipo_reporte varchar [not null]
  usuario_id bigint [not null]
  duracion_ms integer [not null]
  estado varchar [not null]
  fecha_ejecucion timestamp [not null]
  created_at timestamp [not null]
}

// ===== SHARED SCHEMA =====
Table shared.audit_log {
  id bigserial [primary key]
  usuario_id bigint [null]
  usuario_email varchar [null]
  tipo_operacion varchar [not null]
  tabla_afectada varchar [not null]
  registro_id bigint [null]
  datos_antes jsonb [null]
  datos_despues jsonb [null]
  ip_origen varchar [null]
  timestamp timestamp [not null]
}

Table shared.processed_events {
  id bigserial [primary key]
  event_id uuid [unique, not null]
  event_type varchar [not null]
  event_source varchar [not null]
  processed_at timestamp [not null]
}
